# LinksAwakening

./: .gitignore  CMakeLists.txt  README.md
assets/: icon.rc
game/: bank_00.c  bank_01.c  bank_02.c  bank_03.c  bank_04.c  bank_05.c  bank_06.c  bank_07.c  bank_08.c  bank_09.c  bank_0A.c  bank_0B.c  bank_0C.c  bank_0D.c  bank_0E.c  bank_0F.c  bank_10.c  bank_11.c  bank_12.c  bank_13.c  bank_14.c  bank_15.c  bank_16.c  bank_17.c  bank_18.c  bank_19.c  bank_1A.c  bank_1B.c  bank_1C.c  bank_1D.c  bank_1E.c  bank_1F.c  cross_func_stubs.c  entity_dispatch.h  fixups.h  game_labels.h  rom_data.c  rom_data.h  wram_defs.h
gbrecomp/: BUILD.md  CMakeLists.txt
gbrecomp/runtime/src/: gbrt.c
src/: config.c  config.h  gb_apu.c  gb_apu.h  gb_cpu.c  gb_cpu.h  gb_input.c  gb_input.h  gb_ppu.c  gb_ppu.h  gb_runtime.c  gb_runtime.h  main.c  save_system.c  save_system.h  win32_menu.c  win32_menu.h
tools/: extract_rom.py  transpile.py
